[package]
name = "nicovideo-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11.24"
scraper = "0.18.1"
serde_derive = "1.0.197"
serde_json = "1.0"
simple_logger = "1.11.0"
log = "0.4.14"
tokio = { version = "1.36.0", features = ["full"] }

